# GeoExplore

./: .replit  GeoExplore_Presentation_Script.md  GeoExplore_Project_Report.md  README.md  app.py  capture_visualizations.py  data_description.md  generate_comprehensive_report.py  generate_fault_density.py  generate_model_analysis.py  generate_potential_maps.py  generate_report_pdf.py  pyproject.toml
attached_assets/: Fold.shp.xml  fault_gcs_ngdr_20250224141337303.sbn  fault_gcs_ngdr_20250224141337303.sbx
utils/: data_processing.py  ml_models.py  visualization.py
