[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "branca>=0.8.1",
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.3",
    "pyproj>=3.7.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.0",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.45.0",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "reportlab>=4.4.0",
]
